--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,12 @@
     box-sizing:border-box;
 }
 
+#map{
+    width:100%;
+    height:100%;
+}
 html,
 body{
     width:100%;
-    height:100%
+    height:100%;
 }
