--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang=""en>
-    <head></head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width", "inital-scale=1.0"
-    <title> Real-Time Tracking App</title>
-    <link rel ="stylesheet" href="/css/style.css">
-    <link rel ="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-    </head>
-    <body>
-        <div id="map"></div>
-        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="js/script.js"></script>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Real-Time Tracking App</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css">
+</head>
+<body>
+  <div id="map"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js"></script>
+  <script src="/js/script.js"></script>
+</body>
 </html>
